@@ -1,4 +1,5 @@
 5.3.0 -> 5.4a1:
+    - jbj: crypto: add --usecrypto options for libtomcrypt/cdsa.
     - jbj: crypto: stub in wrappers for libtomcrypt & Apple CDSA.
     - jbj: autofu: detect libtomcrypt (with custom tomcrypt.pc).
     - jbj: pgp: add ECDSA generate/sign/verify tests using gcrypt/openssl.
